2009-12-11  Richard Guenther  <rguenther@suse.de>

PR lto/41915
	* lto-lang.c (lto_init_options): Initialize flag_complex_method
	to the C99 default.  Do not set flag_unit_at_a_time.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155164 138bc75d-0d04-0410-961f-82ee72b054a4